song-bird/pages/main/css/style.css
/* ... */
.quiz-content__item {
  padding: 3px;
}
.quiz-content__item:first-child {
  border-bottom: 1px solid #aaaea5;
}
.quiz-content__track {
  margin: 10px 0;
  width: 100%;
  min-width: 300px;
}
.quiz-content__info {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -15px;
  margin-left: -15px;
}

@media (max-width: 980px) {
  .quiz-content__info {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
}
@media (max-width: 640px) {
  .quiz-content__player {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .quiz-content__item {
    padding: 0;
    -webkit-box-flex: 1;
        -ms-flex: 1 0 100%;
            flex: 1 0 100%;
  }
  .quiz-content__track {
    min-width: 500px;
  }
}
@media (max-width: 550px) {
  .quiz-content__track {
    min-width: 400px;
  }
}
@media (max-width: 440px) {
  .quiz-content__track {
    min-width: 280px;
  }
}
.controls {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.play-button {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  width: 40px;
  height: 40px;
  border: 2px solid #98d33a;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  border-radius: 50%;
  margin-right: 20px;
  margin-bottom: 12px;
  cursor: pointer;
}
.play-button:hover {
  border: 3px solid #bff586;
}
.play-button_img {
  width: 48px;
  height: 48px;
}

.timebar {
  position: relative;
  -webkit-box-flex: 1;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: 22px;
}
.timebar-track_color {
  z-index: 1;
  position: relative;
  width: 0%;
  display: block;
  height: 4px;
  background: rgb(236, 246, 51);
  background: -webkit-gradient(linear, left top, right top, from(rgb(236, 246, 51)), to(rgb(152, 211, 58)));
  background: linear-gradient(90deg, rgb(236, 246, 51) 0%, rgb(152, 211, 58) 100%);
}
.timebar-track__color-second {
  z-index: 1;
  position: relative;
  width: 0%;
  display: block;
  height: 4px;
  background: rgb(236, 246, 51);
  background: -webkit-gradient(linear, left top, right top, from(rgb(236, 246, 51)), to(rgb(152, 211, 58)));
  background: linear-gradient(90deg, rgb(236, 246, 51) 0%, rgb(152, 211, 58) 100%);
}
.timebar-track_white {
  background-color: #b4b2b2;
  height: 4px;
  margin-top: -4px;
}
.timebar-track__white-second {
  background-color: #b4b2b2;
  height: 4px;
  margin-top: -4px;
}
.timebar-circle, .timebar-circle_second {
  background-color: #b4b2b2;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  position: absolute;
  top: 0;
  z-index: 2;
  -webkit-transform: translate(-50%, calc(-50% + 2px));
  transform: translate(-50%, calc(-50% + 2px));
  -webkit-box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
  cursor: pointer;
}
.timebar-info {
  margin-top: 15px;
  font-size: 11px;
  color: #d3d3d3;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}
.timebar_second {
  position: relative;
  -webkit-box-flex: 1;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: 22px;
}

.info-column {
  -webkit-box-flex: 0;
  -ms-flex: 0 1 50%;
  flex: 0 1 50%;
  position: relative;
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
}
.info-column__item {
  padding: 13.7px;
  background: rgba(0, 0, 0, 0.5);
  border: 1px solid #807f7f;
  cursor: pointer;
  border-radius: 5px;
  -webkit-transition: all 0.8s ease 0s;
  transition: all 0.8s ease 0s;
}
.info-column__item:hover, .info-column__item:active {
  background-color: #6eac09;
  border-color: #85b438;
}
.info-column__card {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  word-wrap: break-word;
  background: rgba(0, 0, 0, 0.5);
  border-radius: 5px;
  padding: 15px;
  border: 1px solid #444;
  width: 100%;
  min-height: 320px;
}

@media (max-width: 980px) {
  .info-column {
    margin-bottom: 10px;
  }
}
.li-circle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background-color: #fff;
  margin-right: 15px;
}
.li-circle:hover, .li-circle:active {
  background-color: #ffffff;
}

.red {
  background-color: #ff0000;
}

.green {
  background-color: #6eac09;
}

.instruction span {
  display: block;
  text-align: center;
  font-size: 20px;
  line-height: 200%;
}

.card-wrapper {
  display: none;
}

.card-body {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  padding: 0;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  min-height: 173px;
}
.card-body_img {
  width: 200px;
  border-radius: 10px;
  height: 155px;
  -o-object-fit: cover;
  object-fit: cover;
  margin-right: 30px;
}
.card-body__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  padding: 0;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}
/* ... */

